# Vecho

./: .gitignore  README.md  angular.json  index.html  index.tsx  metadata.json  package-lock.json  package.json  styles.css  tailwind.config.cjs
.github/workflows/: ci.yml  release.yml
design/: icon-generator.html
scripts/: sync-sidecars.mjs
sidecars/: README.md
src/: app.component.html  app.component.ts  app.routes.ts  translations.ts  types.ts
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app.toml
src-tauri/src/: lib.rs  main.rs  portable.rs  types.rs
src/components/: confirm-dialog.component.ts  icons.ts  lightbox.component.ts  markdown-renderer.component.ts  modal.component.ts  toast.component.ts  vditor-note-editor.component.ts
src/pages/: apps.component.ts  home.component.ts  media-detail.component.ts  media.component.ts  notes.component.ts  profile.component.ts  recycle-bin.component.ts  settings.component.ts  workflow.component.ts
src/services/: backend.service.ts  config.service.ts  confirm.service.ts  custom-reuse-strategy.ts  layout.service.ts  lightbox.service.ts  state.service.ts  storage.service.ts  tauri.service.ts  toast.service.ts
